--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body> 
     <header> 
       <div class="container"> 
-        <div class="row"><a href="index.html"><img class="logo" src="public/images/LOGO1.png" alt=""/></a>
+        <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO1.png" alt=""/></a>
           <h1>真豪科技</h1>
           <nav> 
             <ul> 
@@ -21,27 +21,45 @@
         </div>
       </div>
     </header>
-    <div class="banner"> <img class="img_fluid" src="public/images/product4.png" alt=""/></div>
+    <div class="banner"> <img class="img_fluid" src="public/images/product7.png" alt=""/></div>
     <div class="container S1">
       <h2>最新消息</h2>
       <ul class="newspost"> 
         <li> 
-          <div class="date1">2022-06-10</div>
+          <div class="date">2022-06-10</div>
           <div class="product1">產品資訊</div>
-          <div class="news1">裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!</div>
+          <div class="news">裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!</div>
         </li>
         <li> 
-          <div class="date2">2022-05-23</div>
+          <div class="date">2022-05-23</div>
           <div class="product2">系統公告</div>
-          <div class="news2">6/1網站將進行維護,不便之處敬請原諒</div>
+          <div class="news">6/1網站將進行維護,不便之處敬請原諒</div>
         </li>
         <li> 
-          <div class="date3">2022-05-10</div>
-          <div class="product3">產品資訊</div>
-          <div class="news3">四方吹清洗槽即將上市,請各為多多關注官方資訊!</div>
+          <div class="date">2022-05-10</div>
+          <div class="product1">產品資訊</div>
+          <div class="news">四方吹清洗槽即將上市,請各為多多關注官方資訊!</div>
         </li>
       </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
     </div>
-    <div class="container S2"> <img class="img-fluid" src="public/images/product1.png" alt=""/></div>
+    <div class="container S2 row">
+      <div class="left"><img src="public/images/product1.png" alt=""/><span class="icon-circul-blue"> </span></div>
+      <div class="right"> 
+        <h2>真豪洗冷氣清洗槽</h2>
+        <p>革命性產品</p>
+        <p>完全解決溢水的困擾</p>
+        <p>組裝快速省去繁雜工時</p>
+      </div>
+    </div>
+    <div class="container S3 row"> 
+      <div class="left"> <img src="public/images/knife.png" alt=""/></div>
+      <div class="right"> 
+        <h2>真豪修邊刀</h2>
+        <p>方便攜帶</p>
+        <p>好操作</p>
+        <p>耐用</p>
+        <p>刀頭更換快速</p>
+      </div>
+    </div>
   </body>
 </head>
