--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       </div>
     </div>
     <div class="container S3 row"> 
-      <div class="left"> <img src="public/images/knife.png" alt=""/></div>
+      <div class="left"> <img src="public/images/knife.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right"> 
         <h2>真豪修邊刀</h2>
         <p>方便攜帶</p>
@@ -61,5 +61,10 @@
         <p>刀頭更換快速</p>
       </div>
     </div>
+    <footer> 
+      <div class="container"> 
+        <div class="row"> </div>
+      </div>
+    </footer>
   </body>
 </head>
