--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
       </div>
     </header>
-    <div class="banner"> <img class="img_fluid" src="public/images/product7.png" alt=""/></div>
+    <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <div class="container S1">
       <h2>最新消息</h2>
       <ul class="newspost"> 
@@ -42,7 +42,7 @@
       </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
     </div>
     <div class="container S2 row">
-      <div class="left"><img src="public/images/product5.png" alt=""/><span class="icon-circul-blue"> </span></div>
+      <div class="left"><img class="img-fluid" src="public/images/product6.png" alt=""/></div>
       <div class="right"> 
         <h2>真豪洗冷氣清洗槽</h2>
         <p>革命性產品</p>
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div class="container S3 row"> 
-      <div class="left"> <img src="public/images/knife.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
+      <div class="left"> <img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right"> 
         <h2>真豪修邊刀</h2>
         <p>方便攜帶</p>
