--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
         <li> 
           <div class="date">2022-05-23</div>
           <div class="product2">系統公告</div>
-          <div class="news">6/1網站將進行維護,不便之處敬請原諒</div>
+          <div class="news">6/1網站將進行維護,不便之處敬請見諒</div>
         </li>
         <li> 
           <div class="date">2022-05-10</div>
           <div class="product1">產品資訊</div>
-          <div class="news">四方吹清洗槽即將上市,請各為多多關注官方資訊!</div>
+          <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
         </li>
       </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
     </div>
@@ -62,7 +62,21 @@
     </div>
     <footer> 
       <div class="container"> 
-        <div class="row"> </div>
+        <div class="row"> 
+          <div class="floor1"><img src="public/images/icon-phone.png" alt=""/>
+            <p>(04)7321533</p>
+          </div>
+          <div class="floor1">   <img src="public/images/icon-tfx.png" alt=""/>
+            <p>(04)7321101</p>
+          </div>
+          <div class="floor2">             <img src="public/images/icon-mail.png" alt=""/>
+            <p>hongcheng@easywash.com</p>
+          </div>
+          <div class="floor2"><img src="public/images/icon-line.png" alt=""/>
+            <p>ID:01469740</p>
+          </div>
+        </div>
+        <p>copyright</p>
       </div>
     </footer>
   </body>
