--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </div>
     </div>
     <div class="container S3 row"> 
-      <div class="left"> <img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
+      <div class="left"> <img src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right"> 
         <h2>真豪修邊刀</h2>
         <p>方便攜帶</p>
