--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <div class="floor1">   <img src="public/images/icon-tfx.png" alt=""/>
             <p>(04)7321101</p>
           </div>
-          <div class="floor2">             <img src="public/images/icon-mail.png" alt=""/>
+          <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail.png" alt=""/>
             <p>hongcheng@easywash.com</p>
           </div>
           <div class="floor2"><img src="public/images/icon-line.png" alt=""/>
