--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body> 
     <header> 
       <div class="container"> 
-        <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;">menu</a>
+        <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
           <nav> 
             <ul> 
               <li><a href="#">關於我們</a></li>
