--- a/about_us.html
+++ b/about_us.html
@@ -25,52 +25,13 @@
         </div>
       </div>
     </header>
-    <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
-    <div class="S1">
-      <div class="container">
-        <h2>最新消息</h2>
-        <ul class="newspost"> 
-          <li> 
-            <div class="date">2022-06-10</div>
-            <div class="product1">產品資訊</div>
-            <div class="news">裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!</div>
-          </li>
-          <li> 
-            <div class="date">2022-05-23</div>
-            <div class="product2">系統公告</div>
-            <div class="news">6/1網站將進行維護,不便之處敬請見諒</div>
-          </li>
-          <li> 
-            <div class="date">2022-05-10</div>
-            <div class="product1">產品資訊</div>
-            <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
-          </li>
-        </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
+    <section class="container">
+      <div class="breadcrumb"> <a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="design-list.html">關於我們 </a></div>
+      <div class="about1"> 
+        <p>天氣越炎熱，對空調的需求越來越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，</p>
+        <p>能夠用更輕鬆的方式來保養、清潔冷氣。才能在這炎炎夏日,享受乾淨舒服的冷氣。</p>
       </div>
-    </div>
-    <div class="S2">  
-      <div class="container row">
-        <div class="left col-12"><img class="img-fluid" src="public/images/product6.png" alt=""/></div>
-        <div class="right col-12">
-          <h2>真豪洗冷氣清洗槽</h2>
-          <p>革命性產品</p>
-          <p>完全解決溢水的困擾</p>
-          <p>組裝快速省去繁雜工時</p>
-        </div>
-      </div>
-    </div>
-    <div class="S3">   
-      <div class="container row"> 
-        <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
-        <div class="right col-12 order-md-1">
-          <h2>真豪修邊刀</h2>
-          <p>方便攜帶</p>
-          <p>好操作</p>
-          <p>耐用</p>
-          <p>刀頭更換快速</p>
-        </div>
-      </div>
-    </div>
+    </section>
     <footer> 
       <div class="container"> 
         <div class="row"> 
