--- a/about_us.html
+++ b/about_us.html
@@ -25,12 +25,15 @@
         </div>
       </div>
     </header>
-    <section class="container">
-      <div class="breadcrumb"> <a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="design-list.html">關於我們 </a></div>
-      <div class="about1"> 
-        <p>天氣越炎熱，對空調的需求越來越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，</p>
-        <p>能夠用更輕鬆的方式來保養、清潔冷氣。才能在這炎炎夏日,享受乾淨舒服的冷氣。</p>
+    <section>
+      <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
+      <div class="about1 container">
+        <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，</p>
+        <p>能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，</p>
+        <p>都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！</p>
+        <p>所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
       </div>
+      <div class="about2 container"> </div>
     </section>
     <footer> 
       <div class="container"> 
