--- a/about_us.html
+++ b/about_us.html
@@ -25,6 +25,7 @@
         </div>
       </div>
     </header>
+    <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
       <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
       <div class="about1 container">
@@ -33,7 +34,14 @@
         <p>都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！</p>
         <p>所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
       </div>
-      <div class="about2 container"> </div>
+      <div class="about2 container row"> 
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+      </div>
     </section>
     <footer> 
       <div class="container"> 
