--- a/about_us.html
+++ b/about_us.html
@@ -4,6 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EasyWash </title>
+  <link rel="stylesheet" href="public/js/WOW-master/css/libs/animate.css"/>
   <link rel="stylesheet" href="public/css/style.css"/>
   <body> 
     <header> 
@@ -26,21 +27,30 @@
       </div>
     </header>
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
-    <section>
+    <section class="wow bounceInLeft">
       <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
       <div class="about1 container">
-        <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，</p>
-        <p>能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，</p>
-        <p>都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！</p>
-        <p>所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
+        <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，<br/> 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，<br/> 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！<br/> 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
       </div>
       <div class="about2 container row"> 
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"><img src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts1">ㄇ型主體架</h3>
+        </div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts2">中層U型架</h3>
+        </div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts3">調整轉軸</h3>
+        </div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts4">集水袋</h3>
+        </div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts5">伸縮管</h3>
+        </div>
+        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <h3 class="parts6">上擋水板 </h3>
+        </div>
       </div>
     </section>
     <footer> 
@@ -63,6 +73,7 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="public/js/WOW-master/dist/wow.min.js"></script>
     <script src="public/js/easywash-script.js"></script>
   </body>
 </head>
