--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EasyWash </title>
-  <link rel="stylesheet" href="public/js/WOW-master/css/libs/animate.css"/>
   <link rel="stylesheet" href="public/css/style.css"/>
   <body> 
     <header> 
@@ -15,8 +14,9 @@
               <li><a href="about_us.html">關於我們</a></li>
               <li><a href="javascript:;">產品介紹</a>
                 <ul class="submenu">
-                  <li> <a href="#">冷氣清洗槽</a></li>
-                  <li> <a href="#">手工具、零件</a></li>
+                  <li> <a href="product1.html">冷氣清洗槽</a></li>
+                  <li> <a href="#">手工具</a></li>
+                  <li> <a href="#">零件</a></li>
                 </ul>
               </li>
               <li><a href="#">客戶回饋</a></li>
@@ -27,8 +27,10 @@
       </div>
     </header>
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
-    <section class="wow bounceInLeft">
-      <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
+    <section>
+      <div class="breadcrumb"> 
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
+      </div>
       <div class="about1 container">
         <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，<br/> 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，<br/> 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！<br/> 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
       </div>
