--- a/product.html
+++ b/product.html
@@ -12,11 +12,11 @@
           <nav> 
             <ul> 
               <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="javascript:;">產品介紹</a>
+              <li><a href="product.html">產品介紹</a>
                 <ul class="submenu">
-                  <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="#">手工具</a></li>
-                  <li> <a href="#">零件</a></li>
+                  <li> <a href="javascript:;">冷氣清洗槽</a></li>
+                  <li> <a href="javascript:;">手工具</a></li>
+                  <li> <a href="javascript:;">零件</a></li>
                 </ul>
               </li>
               <li><a href="#">客戶回饋</a></li>
@@ -27,51 +27,23 @@
       </div>
     </header>
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
-    <div class="S1">
-      <div class="container">
-        <h2>最新消息</h2>
-        <ul class="newspost"> 
-          <li> 
-            <div class="date">2022-06-10</div>
-            <div class="product1">產品資訊</div>
-            <div class="news">裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!</div>
-          </li>
-          <li> 
-            <div class="date">2022-05-23</div>
-            <div class="product2">系統公告</div>
-            <div class="news">6/1網站將進行維護,不便之處敬請見諒</div>
-          </li>
-          <li> 
-            <div class="date">2022-05-10</div>
-            <div class="product1">產品資訊</div>
-            <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
-          </li>
-        </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
+    <section>
+      <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product.html">產品介紹</a></div>
+      <div class="product-left container">
+        <dl> 
+          <dt> <a href="">冷氣清洗槽</a></dt>
+          <dt> <a href="">手工具</a></dt>
+          <dt> <a href="">零件</a></dt>
+        </dl>
       </div>
-    </div>
-    <div class="S2">  
-      <div class="container row">
-        <div class="left col-12"><img class="img-fluid" src="public/images/product6.png" alt=""/></div>
-        <div class="right col-12">
-          <h2>真豪洗冷氣清洗槽</h2>
-          <p>革命性產品</p>
-          <p>完全解決溢水的困擾</p>
-          <p>組裝快速省去繁雜工時</p>
+      <div class="product-right container">
+        <div class="row"> 
+          <div class="col-12 col-md-6"> <a href=""> </a></div>
+          <div class="col-12 col-md-6"> <a href=""> </a></div>
+          <div class="col-12 col-md-6"> <a href=""> </a></div>
         </div>
       </div>
-    </div>
-    <div class="S3">   
-      <div class="container row"> 
-        <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
-        <div class="right col-12 order-md-1">
-          <h2>真豪修邊刀</h2>
-          <p>方便攜帶</p>
-          <p>好操作</p>
-          <p>耐用</p>
-          <p>刀頭更換快速</p>
-        </div>
-      </div>
-    </div>
+    </section>
     <footer> 
       <div class="container"> 
         <div class="row"> 
