--- a/product1.html
+++ b/product1.html
@@ -15,8 +15,8 @@
               <li><a href="javascript:;">產品介紹</a>
                 <ul class="submenu">
                   <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="javascript:;">手工具</a></li>
-                  <li> <a href="javascript:;">零件</a></li>
+                  <li> <a href="product2.html">手工具</a></li>
+                  <li> <a href="product3.html">零件</a></li>
                 </ul>
               </li>
               <li><a href="#">客戶回饋</a></li>
@@ -35,17 +35,17 @@
         <div class="product-left col-12 col-md-9">
           <dl> 
             <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-            <dt> <a href="#">手工具</a></dt>
-            <dt> <a href="#">零件</a></dt>
+            <dt> <a href="product2.html">手工具</a></dt>
+            <dt> <a href="product3.html">零件</a></dt>
           </dl>
         </div>
         <div class="product-right">
           <div class="row"> 
-            <div class="col-12 col-md-6"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
                 <h3>真豪洗</h3></a></div>
-            <div class="col-12 col-md-6"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
                 <h3>鯨霸</h3></a></div>
-            <div class="col-12 col-md-6"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
                 <h3>四方吹</h3></a></div>
           </div>
         </div>
