--- a/product2.html
+++ b/product2.html
@@ -12,11 +12,11 @@
           <nav> 
             <ul> 
               <li><a href="about_us.html">關於我們</a></li>
-              <li><a href="product.html">產品介紹</a>
+              <li><a href="javascript:;">產品介紹</a>
                 <ul class="submenu">
-                  <li> <a href="javascript:;">冷氣清洗槽</a></li>
-                  <li> <a href="javascript:;">手工具</a></li>
-                  <li> <a href="javascript:;">零件</a></li>
+                  <li> <a href="product1.html">冷氣清洗槽</a></li>
+                  <li> <a href="product2.html">手工具</a></li>
+                  <li> <a href="product3.html">零件</a></li>
                 </ul>
               </li>
               <li><a href="#">客戶回饋</a></li>
@@ -28,19 +28,26 @@
     </header>
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
-      <div class="breadcrumb container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product.html">產品介紹</a></div>
-      <div class="product-left container">
-        <dl> 
-          <dt> <a href="">冷氣清洗槽</a></dt>
-          <dt> <a href="">手工具</a></dt>
-          <dt> <a href="">零件</a></dt>
-        </dl>
+      <div class="breadcrumb"> 
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a></div>
       </div>
-      <div class="product-right container">
-        <div class="row"> 
-          <div class="col-12 col-md-6"> <a href=""> </a></div>
-          <div class="col-12 col-md-6"> <a href=""> </a></div>
-          <div class="col-12 col-md-6"> <a href=""> </a></div>
+      <div class="container">
+        <div class="product-left col-12 col-md-9">
+          <dl> 
+            <dt> <a href="product1.html">冷氣清洗槽</a></dt>
+            <dt> <a href="product2.html">手工具</a></dt>
+            <dt> <a href="product3.html">零件</a></dt>
+          </dl>
+        </div>
+        <div class="product-right">
+          <div class="row"> 
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>真豪修邊刀</h3></a></div>
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>六角軸修邊刀頭</h3></a></div>
+            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>壓力板手</h3></a></div>
+          </div>
         </div>
       </div>
     </section>
