--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
               <li><a href="javascript:;">產品介紹</a>
                 <ul class="submenu">
                   <li> <a href="product1.html">冷氣清洗槽</a></li>
-                  <li> <a href="#">手工具</a></li>
-                  <li> <a href="#">零件</a></li>
+                  <li> <a href="product2.html">手工具</a></li>
+                  <li> <a href="product3.html">零件</a></li>
                 </ul>
               </li>
               <li><a href="#">客戶回饋</a></li>
