--- a/product3.html
+++ b/product3.html
@@ -29,29 +29,33 @@
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
       <div class="breadcrumb"> 
-        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product3.html">零件</a></div>
       </div>
-      <div class="about1 container">
-        <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，<br/> 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，<br/> 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！<br/> 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
-      </div>
-      <div class="about2 container row"> 
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts1">ㄇ型主體架</h3>
+      <div class="container">
+        <div class="product-left col-12 col-md-9">
+          <dl> 
+            <dt> <a href="product1.html">冷氣清洗槽</a></dt>
+            <dt> <a href="product2.html">手工具</a></dt>
+            <dt> <a href="product3.html">零件</a></dt>
+          </dl>
         </div>
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts2">中層U型架</h3>
-        </div>
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts3">調整轉軸</h3>
-        </div>
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts4">集水袋</h3>
-        </div>
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts5">伸縮管</h3>
-        </div>
-        <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-          <h3 class="parts6">上擋水板 </h3>
+        <div class="product-right">
+          <div class="row"> 
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>調整轉軸</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>集水袋</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>ㄇ型主體架</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>中層U型架</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>伸縮管</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>上檔水板</h3></a></div>
+            <div class="col-md-4 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+                <h3>加長桿</h3></a></div>
+          </div>
         </div>
       </div>
     </section>
@@ -64,10 +68,10 @@
           <div class="floor1">   <img src="public/images/icon-tfx.png" alt=""/>
             <p>(04)-7321101</p>
           </div>
-          <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail.png" alt=""/>
+          <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail2.png" alt=""/>
             <p>hongcheng@easywash.com</p>
           </div>
-          <div class="floor2"><img src="public/images/icon-line.png" alt=""/>
+          <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
             <p>ID:01469740</p>
           </div>
         </div>
@@ -75,7 +79,6 @@
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="public/js/WOW-master/dist/wow.min.js"></script>
     <script src="public/js/easywash-script.js"></script>
   </body>
 </head>
