--- a/faq.html
+++ b/faq.html
@@ -29,26 +29,7 @@
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
       <div class="breadcrumb"> 
-        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">冷氣清洗槽</a></div>
-      </div>
-      <div class="container">
-        <div class="product-left col-12 col-md-9">
-          <dl> 
-            <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-            <dt> <a href="product2.html">手工具</a></dt>
-            <dt> <a href="product3.html">零件</a></dt>
-          </dl>
-        </div>
-        <div class="product-right">
-          <div class="row"> 
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-                <h3>真豪洗</h3></a></div>
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-                <h3>鯨霸</h3></a></div>
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-                <h3>四方吹</h3></a></div>
-          </div>
-        </div>
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="faq.html">常見問題</a></div>
       </div>
     </section>
     <footer> 
