--- a/product2.html
+++ b/product2.html
@@ -19,8 +19,8 @@
                   <li> <a href="product3.html">零件</a></li>
                 </ul>
               </li>
-              <li><a href="#">客戶回饋</a></li>
-              <li><a href="#">常見問題</a></li>
+              <li><a href="client.html">客戶回饋</a></li>
+              <li><a href="faq.html">常見問題</a></li>
             </ul>
           </nav>
         </div>
