--- a/client.html
+++ b/client.html
@@ -31,6 +31,19 @@
       <div class="breadcrumb"> 
         <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="client.html">客戶回饋</a></div>
       </div>
+      <div class="container"> 
+        <div class="row"> 
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+        </div>
+      </div>
     </section>
     <footer> 
       <div class="container"> 
