--- a/product1.html
+++ b/product1.html
@@ -41,11 +41,11 @@
         </div>
         <div class="product-right">
           <div class="row"> 
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="product1_1.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
                 <h3>真豪洗</h3></a></div>
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="product1_2.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
                 <h3>鯨霸</h3></a></div>
-            <div class="col-md-6 col-12"> <a href="#"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+            <div class="col-md-6 col-12"> <a href="product1_3.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
                 <h3>四方吹</h3></a></div>
           </div>
         </div>
