--- a/product1_1.html
+++ b/product1_1.html
@@ -29,39 +29,34 @@
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
       <div class="breadcrumb"> 
-        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product3.html">零件</a></div>
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">冷氣清洗槽</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_1.html">真豪洗</a></div>
       </div>
       <div class="container">
         <div class="product-left col-12 col-md-9">
           <dl> 
-            <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-            <dt> <a href="product2.html">手工具</a></dt>
-            <dt> <a href="product3.html">零件</a></dt>
+            <dt> <a href="product1_1.html">真豪洗</a></dt>
+            <dt> <a href="product1_2.html">鯨霸</a></dt>
+            <dt> <a href="product1_3.html">四方吹</a></dt>
           </dl>
         </div>
         <div class="product-right">
           <div class="row"> 
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>調整轉軸</h3>
+            <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-6 col-12">
+              <h2>真豪洗冷氣清洗槽</h2>
+              <p>適用尺寸:76~130CM</p>
+              <p>輕量化,好攜帶</p>
+              <p>外袋展開大,好收納</p>
+              <p>左右出管都可輕鬆使用</p>
+              <p>兩段式排水接管(不會塞水 )</p>
+              <p>零件都可單一更換,不必整組換新</p>
             </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>集水袋</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>ㄇ型主體架</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>中層U型架</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>伸縮管</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>上檔水板</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>加長桿</h3>
-            </div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           </div>
         </div>
       </div>
