--- a/product2_3.html
+++ b/product2_3.html
@@ -29,39 +29,31 @@
     <div class="banner"> <img class="img-fluid" src="public/images/product7.png" alt=""/></div>
     <section>
       <div class="breadcrumb"> 
-        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product3.html">零件</a></div>
+        <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_3.html">壓力板手</a></div>
       </div>
       <div class="container">
         <div class="product-left col-12 col-md-9">
           <dl> 
-            <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-            <dt> <a href="product2.html">手工具</a></dt>
-            <dt> <a href="product3.html">零件</a></dt>
+            <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
+            <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
+            <dt> <a href="product2_3.html">壓力板手</a></dt>
           </dl>
         </div>
         <div class="product-right">
           <div class="row"> 
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>調整轉軸</h3>
+            <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-6 col-12">
+              <h2>壓力板手</h2>
+              <p> </p>
+              <p> </p>
+              <p> </p>
+              <p> </p>
+              <p> </p>
+              <p> </p>
             </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>集水袋</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>ㄇ型主體架</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>中層U型架</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>伸縮管</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>上檔水板</h3>
-            </div>
-            <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-              <h3>加長桿</h3>
-            </div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+            <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           </div>
         </div>
       </div>
