--- a/about_us.html
+++ b/about_us.html
@@ -37,22 +37,13 @@
     </div>
     <div class="about2 container row"> 
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts1">ㄇ型主體架</h3>
+        <h3>主體架</h3>
       </div>
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts2">中層U型架</h3>
+        <h3>集水袋</h3>
       </div>
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts3">調整轉軸</h3>
-      </div>
-      <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts4">集水袋</h3>
-      </div>
-      <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts5">伸縮管</h3>
-      </div>
-      <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
-        <h3 class="parts6">上擋水板 </h3>
+        <h3>外提袋</h3>
       </div>
     </div>
   </section>
