--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="product1">產品資訊</div>
           <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
         </li>
-      </ul><img class="logo2" src="public/images/LOGO2.png" alt=""/>
+      </ul><img class="logo2-1" src="public/images/LOGO2.png" alt=""/>
     </div>
   </div>
   <div class="S2">  
@@ -63,7 +63,7 @@
   </div>
   <div class="S3">   
     <div class="container row"> 
-      <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2" src="public/images/LOGO2.png" alt=""/></div>
+      <div class="left col-12"><img class="img-fluid" src="public/images/knife2.png" alt=""/><img class="logo2-2" src="public/images/LOGO2.png" alt=""/></div>
       <div class="right col-12 order-md-1">
         <h2>真豪修邊刀</h2>
         <p>方便攜帶</p>
