--- a/product1_1.html
+++ b/product1_1.html
@@ -42,7 +42,7 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd1-1-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>真豪洗冷氣清洗槽</h2>
             <p>適用尺寸:76~130CM</p>
