--- a/product2.html
+++ b/product2.html
@@ -42,11 +42,14 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <a href="product2_1.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product2_1.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
               <h3>真豪修邊刀</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_2.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product2_2.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
               <h3>六角軸修邊刀頭</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_3.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product2_3.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
               <h3>壓力板手</h3></a></div>
         </div>
       </div>
