--- a/product1.html
+++ b/product1.html
@@ -42,11 +42,14 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <a href="product1_1.html"> <img class="img-fluid img-big" src="public/images/pd1-1.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product1_1.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/pd1-1.png" alt=""/></div>
               <h3>真豪洗</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product1_2.html"> <img class="img-fluid img-big" src="public/images/pd1-2.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product1_2.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/pd1-2.png" alt=""/></div>
               <h3>鯨霸</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product1_3.html"> <img class="img-fluid img-big" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-6 col-12"> <a href="product1_3.html"> 
+              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
               <h3>四方吹</h3></a></div>
         </div>
       </div>
