--- a/product2.html
+++ b/product2.html
@@ -43,7 +43,7 @@
       <div class="product-right">
         <div class="row"> 
           <div class="col-md-6 col-12"> <a href="product2_1.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+              <div class="img-big"><img class="img-fluid" src="public/images/pd2-1.png" alt=""/></div>
               <h3>真豪修邊刀</h3></a></div>
           <div class="col-md-6 col-12"> <a href="product2_2.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
