--- a/product1_2.html
+++ b/product1_2.html
@@ -46,11 +46,9 @@
           <div class="col-md-6 col-12">
             <h2>鯨霸冷氣清洗槽</h2>
             <p>適用尺寸:95~160CM</p>
-            <p>輕量化,好攜帶</p>
-            <p>外袋展開大,好收納</p>
-            <p>左右出管都可輕鬆使用</p>
-            <p>兩段式排水接管(不會塞水 )</p>
-            <p>零件都可單一更換,不必整組換新</p>
+            <p>真豪洗清洗的大小鯨霸也適用</p>
+            <p>鯨霸還有隨件附上加長桿</p>
+            <p>上下高度能夠再擴大6公分</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
