--- a/product2_1.html
+++ b/product2_1.html
@@ -42,15 +42,15 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-1-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>真豪修邊刀</h2>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
+            <p>適用銅管尺寸2~5分</p>
+            <p>相當於1~16mm</p>
+            <p>刀頭外層鍍鈦,不易生鏽</p>
+            <p>輕輕一按就能替換刀頭</p>
+            <p>購買還有附贈小刀片可以使用</p>
+            <p>刀頭可以另外單一購買</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
