--- a/product2.html
+++ b/product2.html
@@ -46,7 +46,7 @@
               <div class="img-big"><img class="img-fluid" src="public/images/pd2-1.png" alt=""/></div>
               <h3>真豪修邊刀</h3></a></div>
           <div class="col-md-6 col-12"> <a href="product2_2.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+              <div class="img-big"><img class="img-fluid" src="public/images/pd2-2.png" alt=""/></div>
               <h3>六角軸修邊刀頭</h3></a></div>
           <div class="col-md-6 col-12"> <a href="product2_3.html"> 
               <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
