--- a/product2_2.html
+++ b/product2_2.html
@@ -42,19 +42,16 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-2-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>六角軸修邊刀頭</h2>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
+            <p>適用銅管尺寸2~5分</p>
+            <p>相當於1~16mm</p>
+            <p>刀頭外層鍍鈦,不易生鏽</p>
+            <p>此修邊刀頭運用在電動鑽頭</p>
           </div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-2.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-3.png" alt=""/></div>
         </div>
       </div>
     </div>
