--- a/product1_1.html
+++ b/product1_1.html
@@ -50,7 +50,7 @@
             <p>外袋展開大,好收納</p>
             <p>左右出管都可輕鬆使用</p>
             <p>兩段式排水接管(不會塞水 )</p>
-            <p>零件都可單一更換,不必整組換新</p>
+            <p>零件都可單一更換,不必整組換新</p><a href="https://www.youtube.com/watch?v=PGiqnDiTnaI&amp;t=2s">使用教學</a>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
