--- a/about_us.html
+++ b/about_us.html
@@ -59,7 +59,7 @@
         <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail.png" alt=""/>
           <p>hongcheng@easywash.com</p>
         </div>
-        <div class="floor2"><img src="public/images/icon-line2.png" alt=""/>
+        <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
           <p>ID:01469740</p>
         </div>
       </div>
