--- a/about_us.html
+++ b/about_us.html
@@ -32,8 +32,10 @@
     <div class="breadcrumb"> 
       <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="about_us.html">關於我們 </a></div>
     </div>
-    <div class="about1 container">
-      <p>天氣越炎熱，對空調的需求越高，就更需要注重空調的清潔！我們致力於推出冷氣空調相關的產品，<br/> 能夠用更輕鬆的方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。而每項產品的零件，<br/> 都是朝著輕巧耐用、組裝簡單的方向來去研發，就是為了讓我們的產品是人人都可以輕鬆上手的好工具！<br/> 所以，選擇真豪洗，就是選擇了最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
+    <div class="about1 container row">
+      <p>　　天氣越來越炎熱，對冷氣的需求也逐漸增加，而為了讓冷氣使用起來乾淨又涼<br/> 爽，適時的清洗冷氣是必要的。我們致力於推出冷氣空調相關的產品，能用更輕鬆的 <br/> 方式來保養、清潔冷氣，才能在這炎炎夏日，享受乾淨舒服的冷氣。</p>
+      <P>　　我們每項產品的零件都是朝著輕巧、耐用、組裝簡單的方向去研發，為的就是讓<br/> 我們的產品成為人人都能輕鬆上手的好工具！</P>
+      <p>　　選擇真豪洗，選擇最輕鬆、最方便的方式來清潔冷氣，帶給家人最舒適的環境！</p>
     </div>
     <div class="about2 container row"> 
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about1.png" alt=""/>
