--- a/product2_3.html
+++ b/product2_3.html
@@ -45,7 +45,7 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>壓力板手</h2>
-            <p> </p>
+            <p>即將上市</p>
             <p> </p>
             <p> </p>
             <p> </p>
