--- a/client.html
+++ b/client.html
@@ -34,7 +34,7 @@
     </div>
     <div class="container"> 
       <div class="row"> 
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/client1.png" alt=""/></div>
         <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
         <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
         <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
