--- a/faq.html
+++ b/faq.html
@@ -36,29 +36,29 @@
     <div class="container-faq">
       <div class="question-container">
         <div class="question"> 
-          <h3>問題1</h3>
+          <h3>如何購買</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>答案1</p>
+          <p>全台冷氣冷材行都有銷售通路，網路電商也有可以購買的賣場喔!</p>
         </div>
       </div>
       <div class="question-container">
         <div class="question"> 
-          <h3>問題2</h3>
+          <h3>部分零件壞了怎麼辦</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>答案2</p>
+          <p>可以連絡原本購買的店家，需要更換什麼店主就會幫你們叫貨喔!</p>
         </div>
       </div>
       <div class="question-container">
         <div class="question"> 
-          <h3>問題3</h3>
+          <h3>我是經銷商，請問進貨的管道是？</h3>
           <div class="icon-arrow"> <i class="fa-solid fa-angle-down"></i></div>
         </div>
         <div class="answer"> 
-          <p>答案3</p>
+          <p>歡迎撥打頁尾的連絡電話，也可以傳真或是加LINE喔!</p>
         </div>
       </div>
     </div>
