--- a/product1_2.html
+++ b/product1_2.html
@@ -49,7 +49,7 @@
             <p>真豪洗清洗的大小鯨霸也適用</p>
             <p>使用方式與真豪洗相同</p>
             <p>鯨霸隨件附上加長桿</p>
-            <p>上下高度能夠再擴大6公分</p>
+            <p>上下高度能夠再擴大6公分</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">使用教學</a>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
