--- a/product1_3.html
+++ b/product1_3.html
@@ -45,7 +45,11 @@
           <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>四方吹冷氣清洗槽</h2>
+            <p>即將上市</p>
           </div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
         </div>
       </div>
     </div>
