--- a/product2_2.html
+++ b/product2_2.html
@@ -48,7 +48,7 @@
             <p>適用銅管尺寸2~5分</p>
             <p>相當於1~16mm</p>
             <p>刀頭外層鍍鈦,不易生鏽</p>
-            <p>此修邊刀頭運用在電動鑽頭</p>
+            <p>此修邊刀頭運用於電動鑽頭</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-3.png" alt=""/></div>
