--- a/product3.html
+++ b/product3.html
@@ -42,19 +42,19 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts1.png" alt=""/>
             <h3>調整轉軸</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/about2.png" alt=""/>
             <h3>集水袋</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts3.png" alt=""/>
             <h3>ㄇ型主體架</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts4.png" alt=""/>
             <h3>中層U型架</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts5.png" alt=""/>
             <h3>伸縮管</h3>
           </div>
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
