--- a/product1_1.html
+++ b/product1_1.html
@@ -30,7 +30,7 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">冷氣清洗槽</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_1.html">真豪洗</a></div>
+      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">冷氣清洗槽</a><span>&nbsp; &gt; &nbsp;</span><a href="product1_1.html">真豪洗</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
@@ -55,9 +55,8 @@
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-3.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-4.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-5.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd1-1-6.png" alt=""/></div>
         </div>
       </div>
     </div>
