--- a/product2_3.html
+++ b/product2_3.html
@@ -30,30 +30,31 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_3.html">壓力板手</a></div>
+      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_3.html">大力活動扳手</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
           <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
           <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
-          <dt> <a href="product2_3.html">壓力板手</a></dt>
+          <dt> <a href="product2_3.html">大力活動扳手</a></dt>
+          <dt> <a href="product2_4.html">螺絲小幫手</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-3-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
-            <h2>壓力板手</h2>
-            <p>即將上市</p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
+            <h2>大力活動扳手</h2>
+            <p>防滑齒輪設計，夾持牢固</p>
+            <p>刻度指示提高工作效率</p>
+            <p>開口與調整螺母滑動順暢</p>
+            <p>大力鎖緊構造安全</p>
+            <p>防滑樹脂握把</p>
             <p> </p>
           </div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-2.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-3.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
         </div>
       </div>
