--- a/product2_4.html
+++ b/product2_4.html
@@ -30,30 +30,31 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a></div>
+      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_4.html">螺絲小幫手</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
-          <dt> <a href="product1.html">冷氣清洗槽</a></dt>
-          <dt> <a href="product2.html">手工具</a></dt>
-          <dt> <a href="product3.html">零件</a></dt>
+          <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
+          <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
+          <dt> <a href="product2_3.html">大力活動扳手</a></dt>
+          <dt> <a href="product2_4.html">螺絲小幫手</a></dt>
         </dl>
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <a href="product2_1.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/pd2-1.png" alt=""/></div>
-              <h3>真豪修邊刀</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_2.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/pd2-2.png" alt=""/></div>
-              <h3>六角軸修邊刀頭</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_3.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-              <h3>大力活動扳手</h3></a></div>
-          <div class="col-md-6 col-12"> <a href="product2_4.html"> 
-              <div class="img-big"><img class="img-fluid" src="public/images/pd2-4.png" alt=""/></div>
-              <h3>螺絲小幫手</h3></a></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd2-4-1.png" alt=""/></div>
+          <div class="col-md-6 col-12">
+            <h2>螺絲小幫手</h2>
+            <p>超強吸力，吸取大量螺絲不掉落</p>
+            <p>耐磨耐割，真皮皮革包覆，不怕螺絲造成磨損或割傷</p>
+            <p>鑰匙圈設計，隨取即用，輕巧便利</p>
+            <p>適用於各行各業，吸取各式各樣小零件</p>
+            <p> </p>
+            <p> </p>
+          </div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-4-2.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-4-3.png" alt=""/></div>
         </div>
       </div>
     </div>
