--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <li> 
           <div class="date">2022-06-10</div>
           <div class="product1">產品資訊</div>
-          <div class="news">裝修好幫手-壓力板手即將推出,各位師傅們不要錯過喔!</div>
+          <div class="news">裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!</div>
         </li>
         <li> 
           <div class="date">2022-05-23</div>
