--- a/product2_2.html
+++ b/product2_2.html
@@ -30,14 +30,15 @@
   <div class="banner"> <img class="img-fluid" src="public/images/product8.png" alt=""/></div>
   <section>
     <div class="breadcrumb"> 
-      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="javascript:;">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_2.html">六角軸修邊刀頭</a></div>
+      <div class="container"><a href="index.html">首頁</a><span>&nbsp; &gt; &nbsp;</span><a href="product1.html">產品介紹</a><span>&nbsp; &gt; &nbsp;</span><a href="product2.html">手工具</a><span>&nbsp; &gt; &nbsp;</span><a href="product2_2.html">六角軸修邊刀頭</a></div>
     </div>
     <div class="container">
       <div class="product-left col-12 col-md-9">
         <dl> 
           <dt> <a href="product2_1.html">真豪修邊刀</a></dt>
           <dt> <a href="product2_2.html">六角軸修邊刀頭</a></dt>
-          <dt> <a href="product2_3.html">壓力板手</a></dt>
+          <dt> <a href="product2_3.html">大力活動扳手</a></dt>
+          <dt> <a href="product2_4.html">螺絲小幫手</a></dt>
         </dl>
       </div>
       <div class="product-right">
@@ -47,7 +48,7 @@
             <h2>六角軸修邊刀頭</h2>
             <p>適用銅管尺寸2~5分</p>
             <p>也適用於1~16mm</p>
-            <p>刀頭外層鍍鈦,不易生鏽</p>
+            <p>刀頭外層鍍鈦，不易生鏽</p>
             <p>此修邊刀頭運用於電動鑽頭</p>
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-2-2.png" alt=""/></div>
