--- a/product3.html
+++ b/product3.html
@@ -57,10 +57,10 @@
           <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts5.png" alt=""/>
             <h3>伸縮管</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts6.png" alt=""/>
             <h3>上檔水板</h3>
           </div>
-          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+          <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/parts7.png" alt=""/>
             <h3>加長桿</h3>
           </div>
         </div>
