--- a/about_us.html
+++ b/about_us.html
@@ -44,7 +44,7 @@
       <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about2.png" alt=""/>
         <h3>集水袋</h3>
       </div>
-      <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/>
+      <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/about3.png" alt=""/>
         <h3>外提袋</h3>
       </div>
     </div>
