--- a/product1_1.html
+++ b/product1_1.html
@@ -49,6 +49,7 @@
             <p>輕量化,好攜帶</p>
             <p>外袋展開大,好收納</p>
             <p>左右出管都可輕鬆使用</p>
+            <p>水槽可輕鬆調整上中下層</p>
             <p>兩段式排水接管(不會塞水 )</p>
             <p>零件都可單一更換,不必整組換新</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">使用教學</a>
           </div>
