--- a/product2_3.html
+++ b/product2_3.html
@@ -55,7 +55,7 @@
           </div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-2.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-3.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/pd2-3-4.png" alt=""/></div>
         </div>
       </div>
     </div>
