--- a/product1.html
+++ b/product1.html
@@ -65,7 +65,7 @@
           <p>(04)-7321101</p>
         </div>
         <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail2.png" alt=""/>
-          <p>hongcheng@easywash.com</p>
+          <p>black123963@gmail.com</p>
         </div>
         <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
           <p>ID:01469740</p>
