--- a/product1_2.html
+++ b/product1_2.html
@@ -42,7 +42,7 @@
       </div>
       <div class="product-right">
         <div class="row"> 
-          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
+          <div class="col-md-6 col-12"> <img class="img-fluid" src="public/images/pd1-2-1.png" alt=""/></div>
           <div class="col-md-6 col-12">
             <h2>鯨霸冷氣清洗槽</h2>
             <p>適用尺寸:95~160CM</p>
@@ -51,8 +51,6 @@
             <p>鯨霸隨件附上加長桿</p>
             <p>上下高度能夠再擴大6公分</p><a href="https://youtu.be/PGiqnDiTnaI" target="_blank">使用教學</a>
           </div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-          <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
           <div class="col-md-4 col-12"><img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
         </div>
       </div>
@@ -68,7 +66,7 @@
           <p>(04)-7321101</p>
         </div>
         <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail2.png" alt=""/>
-          <p>hongcheng@easywash.com</p>
+          <p>black123963@gmail.com</p>
         </div>
         <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
           <p>ID:01469740</p>
