--- a/client.html
+++ b/client.html
@@ -36,13 +36,6 @@
       <div class="row"> 
         <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/client1.png" alt=""/></div>
         <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/client2.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
-        <div class="col-md-4 col-12"> <img class="img-fluid" src="public/images/coming-soon.png" alt=""/></div>
       </div>
     </div>
   </section>
@@ -56,7 +49,7 @@
           <p>(04)-7321101</p>
         </div>
         <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail2.png" alt=""/>
-          <p>hongcheng@easywash.com</p>
+          <p>black123963@gmail.com</p>
         </div>
         <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
           <p>ID:01469740</p>
