--- a/index.html
+++ b/index.html
@@ -33,17 +33,17 @@
       <h2>最新消息</h2>
       <ul class="newspost"> 
         <li> 
-          <div class="date">2022-06-10</div>
+          <div class="date">2022-11-01</div>
           <div class="product1">產品資訊</div>
           <div class="news">裝修最強助手-大力活動扳手即將推出,各位師傅們不要錯過喔!</div>
         </li>
         <li> 
-          <div class="date">2022-05-23</div>
-          <div class="product2">系統公告</div>
-          <div class="news">6/1網站將進行維護,不便之處敬請見諒</div>
+          <div class="date">2022-11-01</div>
+          <div class="product1">產品資訊</div>
+          <div class="news">螺絲小幫手-真豪吸上市囉!</div>
         </li>
         <li> 
-          <div class="date">2022-05-10</div>
+          <div class="date">2022-11-01</div>
           <div class="product1">產品資訊</div>
           <div class="news">四方吹清洗槽即將上市,請各位多多關注官方資訊!</div>
         </li>
@@ -83,7 +83,7 @@
           <p>(04)-7321101</p>
         </div>
         <div class="floor2">          <img class="icon-mail" src="public/images/icon-mail2.png" alt=""/>
-          <p>hongcheng@easywash.com</p>
+          <p>black123963@gmail.com</p>
         </div>
         <div class="floor2 line"><img src="public/images/icon-line2.png" alt=""/>
           <p>ID:01469740</p>
