--- a/faq.html
+++ b/faq.html
@@ -11,20 +11,29 @@
   <header> 
     <div class="container"> 
       <div class="row-display-nowrap"><a href="index.html"><img class="logo img-fluid" src="public/images/LOGO3.png" alt=""/></a><a class="icon-menu" id="btn-nav-switch" href="javascript:;"><img src="public/images/menu.svg" alt=""/></a>
-        <nav> 
-          <ul> 
-            <li><a href="about_us.html">關於我們</a></li>
-            <li><a href="javascript:;">產品介紹</a>
-              <ul class="submenu">
-                <li> <a href="product1.html">冷氣清洗槽</a></li>
-                <li> <a href="product2.html">手工具</a></li>
-                <li> <a href="product3.html">零件</a></li>
-              </ul>
-            </li>
-            <li><a href="client.html">客戶回饋</a></li>
-            <li><a href="faq.html">常見問題</a></li>
-          </ul>
-        </nav>
+        <div class="topcomposing">
+          <div class="language">
+            <ul> 
+              <li> <a href="index.html">繁體中文</a></li>
+              <li> <a href="index.html">日本語</a></li>
+              <li> <a href="index.html">English</a></li>
+            </ul>
+          </div>
+          <nav> 
+            <ul> 
+              <li><a href="about_us.html">關於我們</a></li>
+              <li><a href="javascript:;">產品介紹</a>
+                <ul class="submenu">
+                  <li> <a href="product1.html">冷氣清洗槽</a></li>
+                  <li> <a href="product2.html">手工具</a></li>
+                  <li> <a href="product3.html">零件</a></li>
+                </ul>
+              </li>
+              <li><a href="client.html">客戶回饋</a></li>
+              <li><a href="faq.html">常見問題</a></li>
+            </ul>
+          </nav>
+        </div>
       </div>
     </div>
   </header>
